# price-list-system

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  conftest.py  entrypoint.sh  manage.py  pyproject.toml
backend/apps/catalog/: admin.py  factories.py  models.py  normalization.py  serializers.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_remove_catalogproduct_normalized_article.py  0003_catalogproduct_embedding.py
backend/apps/catalog/tests/: test_normalization.py  test_seed_large.py
backend/apps/imports/: __init__.py  constants.py  excel.py  mapping.py  models.py  validators.py
backend/apps/imports/tests/: test_excel.py  test_validators.py
backend/apps/matching/: apps.py  embeddings.py  evaluation.py  llm.py  prompt.py  semantic.py  service.py  shortlist.py  types.py
backend/apps/matching/tests/: test_evaluation.py  test_semantic.py  test_service.py
backend/apps/pricelists/: admin.py  apps.py  factories.py  models.py  serializers.py  tasks.py  views.py
backend/apps/pricelists/migrations/: 0001_initial.py  0002_pricelist_row_errors.py  0003_pricelist_match_progress.py
backend/apps/pricelists/tests/: test_linking.py  test_parse.py
backend/apps/projects/: admin.py  apps.py  factories.py  models.py  serializers.py  tasks.py  views.py
backend/apps/suppliers/: admin.py  factories.py  models.py  serializers.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  pagination.py  urls.py  wsgi.py
backend/config/settings/: base.py
frontend/: Dockerfile  (+5 more)
(+25 files in other folders)
